2005-01-13 Jean-Pierre Roux <jpr@creatis.univ-lyon1.fr>
   * merging of Test/PrintDicomDir and Test/TestDicomDir
	* removal of now redundant Test/PrintDicomDir
	* enhancement of Example/PrintDicomDir

2005-01-13 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Now, python test might work on systems
   * Add the PrintDicomDir test

2005-01-13 Jean-Pierre Roux <jpr@creatis.univ-lyon1.fr>
   * FIX : First entry following group 0002 was lost for
	        Explicit Big Endian Transfer Syntax files
          (group and elem not swaped)
	
2005-01-12 Jean-Pierre Roux <jpr@creatis.univ-lyon1.fr>
   * FIX : Old quick and dirty 'optimistic' heuristic to deal with
	        Big Endian Transfer Syntax supposed the group following 0002
			  begins always by element 0000 (element 0000 is *optional*)
			  To avoid further troubles, let's be pessimistic, and use
			  Document::HandleOutOfGroup0002() method 
	 * FIX : comparison between GDCM_NOTLOADED and Transfer Syntax
              (related pb not yet solved)

2005-01-12 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Bug fix for the python part use
   * Now, PrintHeader.py pass... but outside the ctest use. shit !

2005-01-12 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * gdcmPython/gdcm.i : bug fix when compiling with MSCV

2005-01-11 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
   * Untangle TransferSynatx from gdcm::Document. Now Document only manipulate
     a string and should ask the global TS dict what are the propreties of 
     the transfer syntax

2005-01-11 Jean-Pierre Roux <jpr@creatis.univ-lyon1.fr>
   * Replace confusing name SwitchSwapToBigEndian name by SwitchByteSwapCode
   * Add the Document::HandleOutOfGroup0002(uint16_t group) method
	    to swap the Swap Code, at parsing time, when we come out of group 0002
		 and Transfer Syntax is Big Endian
		 We should be able to read now 'true DICOM" Big Endian coded images