@@ -134,26 +134,6 @@ ELSE(${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} GREATER 1.9)
     ${EXE_DIR}/${CMAKE_CFG_INTDIR}/_gdcm${CMAKE_SHARED_LIBRARY_SUFFIX}
     )
 
-  # Remove temporary (lib)pygdcm(.so .dll) library:
-#  ADD_CUSTOM_COMMAND(
-#    TARGET pygdcm
-#    POST_BUILD
-#    COMMAND ${CMAKE_COMMAND}
-#    ARGS -E remove ${LIB_DIR}/${CMAKE_CFG_INTDIR}/${LIB_NAME}
-#  )
-
-  # where are library stored ?
-#  SET(GDCM_LIB_DIR ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR})
-#  ADD_CUSTOM_COMMAND(
-#    TARGET pygdcm
-#    POST_BUILD
-#    COMMAND ${CMAKE_COMMAND}
-#    ARGS -E copy
-#      ${EXECUTABLE_OUTPUT_PATH}/${CMAKE_CFG_INTDIR}/${MY_LIB_NAME}${CMAKE_SHLIB_SUFFIX}
-#      ${EXECUTABLE_OUTPUT_PATH}/${CMAKE_CFG_INTDIR}/vtkXY.pvm
-#    TARGET vtkXY
-#  )
-
 ENDIF(${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} GREATER 1.9)   
 
 
